CDOC-2051 Fix bio page image width on tablet

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -232,3 +232,10 @@ abbr{
     height: 115px;
   }
 }
+
+// Images
+@media screen and (max-width: 768px) {
+  img {
+    max-width: 50%;
+  }
+}
